# JinYanKai

./: README.md
第一次任务/: 观看比赛.md
第一次任务/build（任务4）/: README.md
第一次任务/任务6/: CMakeLists.txt  CMakeListsjyk.txt  jyk  main  main.cpp  segment.cpp
第二次任务/: README.md
第二次任务/基础任务1/: CMakeLists.txt  atmethod.cpp  task1
第二次任务/基础任务2/: CMakeLists.txt  mission2.cpp  task2
第二次任务/基础任务3/: CMakeLists.txt  mission3.cpp  task3
